[gd_scene load_steps=6 format=3 uid="uid://ci47eik7lfa7d"]

[ext_resource type="Shader" uid="uid://cyc3ken2k7hyv" path="res://external_work/chrizz/balatro.tres" id="1_m1sd3"]
[ext_resource type="Script" uid="uid://dfx8rqq4tlwp4" path="res://_scripts/ui/main_menu.gd" id="1_sdrmk"]
[ext_resource type="Texture2D" uid="uid://b1bcybpnupaha" path="res://art/Title.png" id="2_sdrmk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d2i2g"]
shader = ExtResource("1_m1sd3")

[sub_resource type="CanvasTexture" id="CanvasTexture_crufo"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sdrmk")

[node name="Background" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_d2i2g")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_crufo")
expand_mode = 1

[node name="Title" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -719.25
offset_right = 719.25
offset_bottom = 627.0
grow_horizontal = 2
texture = ExtResource("2_sdrmk")
expand_mode = 1
stretch_mode = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Title"]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -319.24316
offset_top = -295.0
offset_right = 319.24316
offset_bottom = -198.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="name_line-edit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
placeholder_text = "Insert Player Name Here"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="host_button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Host"

[node name="join_button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Join"

[node name="ip-address_line-edit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
placeholder_text = "Join IP Address"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="VBoxContainer/HBoxContainer/host_button" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/join_button" to="." method="_on_join_button_pressed"]
